--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             Click Once
         </button>
         <h1 id="once_result"></h1>
+        <button id="toggler">
+            Toggler
+        </button>
+        <h1 id="toggler_result"></h1>
     </div>
     
     <script type="module" src="/main.js"></script>
